# Aerial-Manipulator

./: README.md
drone_with_arm/launch/: sim.launch.py
drone_with_arm/models/sdu_drone_arm/: sdu_drone_arm.sdf
drone_with_arm/urdf/: two_dof_arm.urdf
eit-playground/: CMakeLists.txt  package.xml  setup_posix.bash
eit-playground/init.d-posix/: 6017_sdu_drone_stereo_cam  6018_sdu_drone_depth_cam  6019_sdu_drone_sonar  6021_sdu_drone_gimbal  6021_sdu_drone_gimbal.post  6022_sdu_drone_solid_state_lidar
eit-playground/launch/: mavros_esp_launch.py  mavros_esp_launch.xml  mavros_launch.py  mavros_launch.xml  mocap.launch.py  models_source_launch.py  optitrack_launch.py  optitrack_launch.xml  posix_mavros.py  posix_spawn.py  posix_world.py  px4_sitl_launch.py  relay.launch.py  relay_launch.xml
eit-playground/mixers/: hexa_x_sdu_mount.aux.mix
eit-playground/models/sdu_drone_depth_cam/: sdu_drone_depth_cam.sdf
eit-playground/models/sdu_drone_gimbal/: model.config  sdu_drone_gimbal.sdf
eit-playground/models/sdu_drone_hitl/: sdu_drone_hitl.sdf
eit-playground/models/sdu_drone_lidar/: sdu_drone_lidar.sdf
eit-playground/models/sdu_drone_mono_cam/: sdu_drone_mono_cam.sdf
eit-playground/models/sdu_drone_mono_cam_downward/: sdu_drone_mono_cam_downward.sdf
eit-playground/models/sdu_drone_solid_state_lidar/: model.config  sdu_drone_solid_state_lidar.sdf
eit-playground/models/sdu_drone_sonar/: sdu_drone_sonar.sdf
eit-playground/models/sdu_drone_stereo_cam/: sdu_drone_stereo_cam.sdf
eit-playground/models/sdu_drone_velodyne/: model.config  sdu_drone_velodyne.sdf
eit-playground/src/: gimbal_node.py  offboard_ctrl_waypoint.py  publisher_member_function.py  relay.py  setup_gazebo.bash  state_machine.py  subscriber_member_function.py
eit-playground/worlds/: hitl_sdu_drone.world
